nivasa-macros/tests/trybuild/validation_is_boolean_invalid.stderr
error: expected a bool field for `#[is_boolean]`
 --> tests/trybuild/validation_is_boolean_invalid.rs:5:5
  |
5 |     #[is_boolean]
  |     ^
