nivasa-macros/tests/trybuild/validation_is_boolean_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct FeatureFlags {
    #[is_boolean]
    enabled: String,
}

fn main() {}
